[package]
name = "worker-wasm-interactions-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
serde_repr = "0.1.9"
serde_with = "1.14.0"
chrono = { version = "0.4.22", features = ["serde"] }
ed25519-dalek = "1.0.1"
hex = "0.4.3"
reqwest = "0.11.12"
twilight-model = "0.13.5"
twilight-http = "0.13.2"
futures = "0.3.24"
worker = "0.0.9"