[package]
name = "worker-wasm-interactions-rs"
description = "A library for writing an interaction based discord bot on Cloudflare Workers."
repository = "https://github.com/ByteAlex/worker-wasm-interactions-rs"
version = "0.0.1"
authors = ["Alexander Becker <abecker@bitflow.dev>"]
edition = "2021"
keywords = ["async", "api", "wasm", "http"]
categories = ["accessibility", "api-bindings"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
reqwest = { version = "0.11.12", features = ["json"] }
twilight-model = "0.13.5"
futures = "0.3.24"
worker = "0.0.9"